fix gap in cat card

--- a/src/HowToPlayModal.css
+++ b/src/HowToPlayModal.css
@@ -133,7 +133,7 @@
 }
 
 .modal-prize-card-top {
-  padding-left: 95px;
+  padding-left: 120px;
   margin-left: 0;
   margin-top: 30px;
 }
